--- a/index.html
+++ b/index.html
@@ -448,8 +448,9 @@
 
 
             </section>
-            © Chukwudebelu Chibunna 2022.
-            <a class="text-white">All rights reserved</a>
+            <br id="try"> 
+            © Chukwudebelu John,
+            <a class="text-white">All Rights Reserved. 2022</a>
         </div>
         <!-- Copyright -->
     </footer>
