--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                     </div>
                     <div class="column__text">
                         <h3 class="section__title if">Have a project? Let's work together!</h3>
+                        <h3 class="section__title subWork">Have a project? <br> Let's work together!</h3>
                         <p class="section__subtitle">
                             I am also a cybersecurity graduate with hundreds of classroom hours in cloud safety,
                             automation, and digital forensics. Seeking to leverage newly-minted top secret security
