--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <script src="https://kit.fontawesome.com/87d4317d3e.js" crossorigin="anonymous"></script>
 
-
+    <link rel="icon" href="/assets/img/profilePhoto.jpg">
     <!-- Bootstrap -->
 
     <!-- CSS only -->
@@ -26,7 +26,7 @@
     <script>
         $(function () {
             count = 0;
-            wordsArray = ["a Software Engineer🔨", "a Data Analyst📈", "a Security Engineer👨🏾‍💻", "a Pentester🔐"];
+            wordsArray = ["a Data Analyst📈", "a Security Engineer👨🏾‍💻", "a Software Engineer🔨"];
             setInterval(function () {
                 count++;
                 $("#word").fadeOut(400, function () {
@@ -328,15 +328,21 @@
                         <h3 class="section__title if">Have a project? Let's work together!</h3>
                         <h3 class="section__title subWork">Have a project? <br> Let's work together!</h3>
                         <p class="section__subtitle">
-                            I am also a cybersecurity graduate with hundreds of classroom hours in cloud safety,
-                            automation, and digital forensics. Seeking to leverage newly-minted top secret security
-                            clearance to become the next network security engineer.
+                            I am also a cybersecurity graduate with hundreds of classroom hours in cloud & network
+                            security,
+                            automation, and digital forensics. Seeking to leverage new technologies and tools in
+                            ensuring the
+                            security of your network.
                         </p>
                         <p id="space"></p>
-                        <p class="section__subtitle">I strive to deliver high-quality opensource and bespoke software. I
-                            have a repertoire inclusive of Computer Programming, and Technical Writing.
-                            I can develop and ship software authored in any one or an amalgam of Java, C++, or
-                            JavaScript.</p>
+                        <p class="section__subtitle">As a prospective data analyst, I strive to pose and answer
+                            questions with
+                            quantitative-driven insights. Through development of personal projects and a valuable
+                            internship,
+                            I have learned the importance of having an iterative, hypothesis-oriented approcah to
+                            analysis.
+                            I am eager to leverage that approach at your organization to achieve data-driven results.
+                        </p>
                         <div class="resume">
                             <a href="http://chibunna.github.io/Digital-Resume/" target="_blank" class="anchor">
                                 <h4 class="section__subtitle resume">Check out my resume
@@ -350,16 +356,17 @@
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
-            <h2 class="section__title">Contact Me</h2>
+            <h2 class="section__title" id="contactMe">Contact Me</h2>
 
             <div class="contact__container container grid">
                 <div class="contact__img">
                     <div>
-                    <img src="/assets/img/programmer.jpg" alt="" class="work__img">
+                        <img src="/assets/img/programmer.jpg" alt="" class="work__img">
+                    </div>
                 </div>
-                </div>
-                <form action="https://formsubmit.co/5a912ba47b96f7ec8aa39aefcf1c4aef" method="POST" name="form"
-                    class="contact__form grid">
+                <form onsubmit="return ValidateEmail(document.contactForm.email)"
+                    action="https://formsubmit.co/5a912ba47b96f7ec8aa39aefcf1c4aef" method="POST" name="form"
+                    class="contact__form grid" name="contactForm">
                     <div class="contact__input grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name </label>
@@ -368,7 +375,7 @@
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email </label>
-                            <input type="text" id="email" name="email" class="contact__input"
+                            <input type="email" id="email" name="email" class="contact__input"
                                 placeholder="jdoe@duck.com" required>
                         </div>
                         <div class="contact__content">
@@ -378,12 +385,13 @@
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Message </label>
-                            <textarea class="contact__input" name="message" id="" cols="0" rows="5"
+                            <textarea class="contact__input" name="message" id="text1" cols="0" rows="5"
                                 placeholder="Hello, Chibunna..." required></textarea>
                         </div>
                         <div class="message">
 
-                            <button type="submit" class="section__subtitle msg__button">Send message</button>
+                            <button type="submit" onsubmit="return ValidateEmail(contactEmail)"
+                                class="section__subtitle msg__button">Send message</button>
                         </div>
                     </div>
 
@@ -395,63 +403,29 @@
 
     <!--==================== FOOTER ====================-->
 
-    <!-- Remove the container if you want to extend the Footer to full width. -->
-    <!-- <div class="container my-5"> -->
-
     <footer class="bg-dark text-center text-white">
-        <!-- Grid container -->
-        <!-- <div class="container p-4 pb-0"> -->
-        <!-- Section: Social media -->
-        <!-- <section class="mb-1">
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;"
+            href="https://twitter.com/chibunnna" target="_blank" role="button"><i class="fab fa-twitter"></i></a>
 
-                Twitter
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!"
-                    role="button"><i class="fab fa-twitter"></i></a>
+        <!-- Linkedin -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;"
+            href="https://www.linkedin.com/in/chibunna/" target="_blank" role="button"><i
+                class="fab fa-linkedin-in"></i></a>
+        <!-- Github -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;"
+            href="https://github.com/chibunna" target="_blank" role="button"><i class="fab fa-github"></i>
+        </a>
 
-                Linkedin
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!"
-                    role="button"><i class="fab fa-linkedin-in"></i></a>
-                Github
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!"
-                    role="button"><i class="fab fa-github"></i></a>
-
-                Google
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;" href="#!"
-                    role="button"><i class="fab fa-google"></i></a>
+        <!-- Google -->
+        <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;"
+            href="https://gmail.com/chibunna@duck.com" target="_blank" role="button"><i class="fab fa-google"></i>
+        </a>
 
 
-            </section> -->
-        <!-- Section: Social media -->
-        <!-- </div> -->
-        <!-- Grid container -->
-
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            <section class="mb-1">
-
-                <!-- Twitter -->
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;"
-                    href="https://twitter.com/chibunnna" target="_blank" role="button"><i
-                        class="fab fa-twitter"></i></a>
-
-                <!-- Linkedin -->
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;"
-                    href="https://www.linkedin.com/in/chibunna/" target="_blank" role="button"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <!-- Github -->
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;"
-                    href="https://github.com/chibunna" target="_blank" role="button"><i class="fab fa-github"></i></a>
-
-                <!-- Google -->
-                <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39;"
-                    href="https://gmail.com/chibunna@duck.com" target="_blank" role="button"><i
-                        class="fab fa-google"></i></a>
-
-
-            </section>
-            <br id="try"> 
-            © Chukwudebelu John,
-            <a class="text-white">All Rights Reserved. 2022</a>
+        </section>
+        <br id="try">
+        © Chukwudebelu John,
+        <a class="text-white">All Rights Reserved. 2022</a>
         </div>
         <!-- Copyright -->
     </footer>
