--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         $(function () {
             count = 0;
-            wordsArray = ["a Data Analyst📈", "a Security Engineer👨🏾‍💻", "a Software Engineer🔨"];
+            wordsArray = ["a Software Engineer🔨", "a Security Engineer👨🏾‍💻"];
             setInterval(function () {
                 count++;
                 $("#word").fadeOut(400, function () {
@@ -230,11 +230,11 @@
                     <div class="qualification__content qualification__active" data-content id="work">
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Data Analyst</h3>
-                                <span class="qualification__subtitle">Brij Money</span>
+                                <h3 class="qualification__title">Security Intern</h3>
+                                <span class="qualification__subtitle">Brij</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - Present
+                                    2022 - Present
                                 </div>
                             </div>
                             <div>
@@ -254,7 +254,7 @@
                                 <span class="qualification__subtitle">Framtid Solutions Ltd</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2017 - 2020
+                                    2019 - 2021
                                 </div>
                             </div>
 
@@ -262,11 +262,11 @@
 
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Web Developer</h3>
-                                <span class="qualification__subtitle">Solidaridad West Africa</span>
+                                <h3 class="qualification__title">Digital Marketer</h3>
+                                <span class="qualification__subtitle">Fiverr</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2014 - 2016
+                                    2017 - Present
                                 </div>
                             </div>
                             <div>
@@ -302,7 +302,7 @@
                             </div>
                             <div>
                                 <h3 class="qualification__title">United States International University</h3>
-                                <span class="qualification__subtitle">MSc. Information Systems Management</span>
+                                <span class="qualification__subtitle">MSc. Information Systems & Technology</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2022 - Present
@@ -328,9 +328,9 @@
                         <h3 class="section__title if">Have a project? Let's work together!</h3>
                         <h3 class="section__title subWork">Have a project? <br> Let's work together!</h3>
                         <p class="section__subtitle">
-                            I am also a cybersecurity graduate with hundreds of classroom hours in cloud & network
+                            I am also a forensic info. tech graduate and intern with hundreds of classroom hours in network
                             security,
-                            automation, and digital forensics. Seeking to leverage new technologies and tools in
+                            forensic accounting, and systems audit. Seeking to leverage new technologies and tools in
                             ensuring the
                             security of your network.
                         </p>
