--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             I am eager to leverage that approach at your organization to achieve data-driven results.
                         </p>
                         <div class="resume">
-                            <a href="http://chibunna.github.io/Digital-Resume/" target="_blank" class="anchor">
+                            <a href="#" target="_blank" class="anchor">
                                 <h4 class="section__subtitle resume">Check out my resume
                             </a>
                         </div>
@@ -424,7 +424,7 @@
 
         </section>
         <br id="try">
-        © Chukwudebelu John,
+        © John Chukwudebelu,
         <a class="text-white">All Rights Reserved. 2022</a>
         </div>
         <!-- Copyright -->
