--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         $(function () {
             count = 0;
-            wordsArray = ["a Software Engineer🔨", "a Security Engineer👨🏾‍💻"];
+            wordsArray = ["a Software Developer🔨", "a Security Engineer👨🏾‍💻"];
             setInterval(function () {
                 count++;
                 $("#word").fadeOut(400, function () {
@@ -115,7 +115,7 @@
         </section>
 
         <!--==================== SERVICES ====================-->
-        <section class="services section" id="services">
+<!--         <section class="services section" id="services">
             <h2 class="section__title">Projects</h2>
             <!-- <span class="section__subtitle"></span> -->
 
@@ -149,9 +149,9 @@
                         </span>
                     </div>
                 </a>
-
+ -->
                 <!-- Services 4 -->
-                <a href="https://github.com/chibunna/lyricsanalyzer" class="github">
+<!--                 <a href="https://github.com/chibunna/lyricsanalyzer" class="github">
                     <div class="services__content">
                         <div>
                             <h4 class="services__title">lyricsfinder</h4>
@@ -176,9 +176,9 @@
                             A collection of open source and commercial tools that aid in red team pentesting operations.
 
                     </div>
-                </a>
+                </a> -->
                 <!-- Services 6 -->
-                <a href="https://github.com/chibunna/coursework_mobile" class="github">
+<!--                 <a href="https://github.com/chibunna/coursework_mobile" class="github">
                     <div class="services__content">
                         <div>
                             <h4 class="services__title">madDiscovery</h4>
@@ -188,9 +188,9 @@
                             An event registration applications for community events, festivals etc. Written in Java.
                         </span>
                     </div>
-                </a>
+                </a> -->
                 <!-- Services 1 -->
-                <!-- <a href="https://google.com" class="github">
+<!--                 <!-- <a href="https://google.com" class="github">
                 <div class="services__content">
                     <div>
                         <h4 class="services__title">asyncify</h4>
@@ -205,7 +205,7 @@
                 </a> -->
 
             </div>
-        </section>
+        </section> -->
 
         <!--==================== QUALIFICATION ====================-->
         <section class="qualification section">
@@ -230,11 +230,11 @@
                     <div class="qualification__content qualification__active" data-content id="work">
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Security Intern</h3>
-                                <span class="qualification__subtitle">Brij</span>
+                                <h3 class="qualification__title">Software Developer</h3>
+                                <span class="qualification__subtitle">Framtid Solutions Ltd</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2022 - Present
+                                    Feb 2020 - Dec 2021
                                 </div>
                             </div>
                             <div>
@@ -250,23 +250,26 @@
                                 <span class="qualification__line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification__title">Software Developer</h3>
-                                <span class="qualification__subtitle">Framtid Solutions Ltd</span>
+                                <h3 class="qualification__title">NOC Technician</h3>
+                                <span class="qualification__subtitle">Solidaridad West Africa</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2019 - 2021
+                                    June - Sept 2019
                                 </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
                             </div>
 
                         </div>
 
-                        <div class="qualification__data">
+<!--                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Digital Marketer</h3>
-                                <span class="qualification__subtitle">Fiverr</span>
+                                <h3 class="qualification__title">NOC Technician</h3>
+                                <span class="qualification__subtitle">Solidaridad West Africa</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2017 - Present
+                                    June - Sept 2019
                                 </div>
                             </div>
                             <div>
@@ -274,7 +277,7 @@
                                 <span class="qualification__line"></span>
                                 <span class="qualification__rounder"></span>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                     <!-- Education -->
@@ -307,8 +310,11 @@
                                     <i class="uil uil-calendar-alt"></i>
                                     2022 - Present
                                 </div>
+                                
                             </div>
-
+                            <div>
+                                <span class="qualification__rounder"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -327,21 +333,18 @@
                     <div class="column__text">
                         <h3 class="section__title if">Have a project? Let's work together!</h3>
                         <h3 class="section__title subWork">Have a project? <br> Let's work together!</h3>
-                        <p class="section__subtitle">
-                            I am also a forensic info. tech graduate and intern with hundreds of classroom hours in network
-                            security,
-                            forensic accounting, and systems audit. Seeking to leverage new technologies and tools in
-                            ensuring the
-                            security of your network.
+                        <p class="section__subtitle">              
+                            I am passionate about creating innovative solutions to complex problems. 
+                            With extensive experience in designing, developing, and deploying software applications, I have a proven track record 
+                            of delivering high-quality products that meet the needs of clients and users.
                         </p>
                         <p id="space"></p>
-                        <p class="section__subtitle">As a prospective data analyst, I strive to pose and answer
-                            questions with
-                            quantitative-driven insights. Through development of personal projects and a valuable
-                            internship,
-                            I have learned the importance of having an iterative, hypothesis-oriented approcah to
-                            analysis.
-                            I am eager to leverage that approach at your organization to achieve data-driven results.
+                        <p class="section__subtitle">
+                            
+                            I excel at collaborating with cross-functional teams to identify project requirements, 
+                            develop technical specifications, and implement scalable solutions. My strong technical 
+                            skills in programming languages and modern web & mobile technologies, coupled with my experience 
+                            working with databases and cloud platforms, allow me to develop reliable and efficient software systems.
                         </p>
                         <div class="resume">
                             <a href="#" target="_blank" class="anchor">
@@ -425,7 +428,7 @@
         </section>
         <br id="try">
         © John Chukwudebelu,
-        <a class="text-white">All Rights Reserved. 2022</a>
+        <a class="text-white">All Rights Reserved. 2023</a>
         </div>
         <!-- Copyright -->
     </footer>
