--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                                     <i class="uil uil-calendar-alt"></i>
                                     June - Sept 2019
                                 </div>
-                                  <div>
+<!--                                   <div>
                                 <span class="qualification__rounder"></span>
-                            </div>
+                            </div> -->
                             </div>
                           
 
@@ -218,9 +218,9 @@
                                     <i class="uil uil-calendar-alt"></i>
                                     2022 - Present
                                 </div>
-                                <div>
+<!--                                 <div>
                                 <span class="qualification__rounder"></span>
-                            </div>
+                            </div> -->
                             </div>
                             
                         </div>
