--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             working with databases and cloud platforms, allow me to develop reliable and efficient software systems.
                         </p>
                         <div class="resume">
-                            <a href="#" target="_blank" class="anchor">
+                            <a href="https://drive.google.com/file/d/1PRp3FixOsnMcObcsBIejMVmEkamyvYhn/view?usp=sharing" target="_blank" class="anchor">
                                 <h4 class="section__subtitle resume">Check out my resume
                             </a>
                         </div>
