--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                     <div class="qualification__content qualification__active" data-content id="work">
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Software Developer</h3>
+                                <h3 class="qualification__title">Security Analyst</h3>
                                 <span class="qualification__subtitle">Framtid Solutions Ltd</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Feb 2020 - Dec 2021
+                                    March 2022 - April 2023
                                 </div>
                             </div>
                             <div>
@@ -157,11 +157,11 @@
                                 <span class="qualification__line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification__title">NOC Technician</h3>
-                                <span class="qualification__subtitle">Solidaridad West Africa</span>
+                                <h3 class="qualification__title">Network Operations Intern</h3>
+                                <span class="qualification__subtitle">Nairobi Precision College</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    June - Sept 2019
+                                    May - August 2019
                                 </div>
 <!--                                   <div>
                                 <span class="qualification__rounder"></span>
@@ -170,6 +170,28 @@
                           
 
                         </div>
+
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">NOC Technician</h3>
+                                <span class="qualification__subtitle">Solidaridad West Africa</span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    June - Oct 2015
+                                </div>
+<!--                                   <div>
+                                <span class="qualification__rounder"></span>
+                            </div> -->
+                            </div>
+                          
+
+                        </div>
+
 
 <!--                         <div class="qualification__data">
                             <div>
@@ -245,6 +267,18 @@
                             I am passionate about creating innovative solutions to complex problems. 
                             With extensive experience in designing, developing, and deploying software applications, I have a proven track record 
                             of delivering high-quality products that meet the needs of clients and users.
+
+
+                            Looking for expert cybersecurity assistance? I'm here to collaborate with you on your project. 
+                            I understand the importance of protecting your digital assets and ensuring the security of your systems. 
+                            Whether you're a small business or a large enterprise, I offer tailored solutions to meet your specific needs.
+
+                            As a cybersecurity analyst, I'm ready to provide you with expert guidance, customized solutions, 
+                            and cutting-edge technology to address your unique challenges. With a focus on timely delivery and maintaining 
+                            confidentiality, my aim is to build a trusted partnership that empowers you to navigate the ever-changing cybersecurity 
+                            landscape with confidence.
+
+                            Reach out to me today with your project details, and let's work together to enhance your cybersecurity posture.
                         </p>
                         <p id="space"></p>
                         <p class="section__subtitle">
@@ -255,7 +289,7 @@
                             working with databases and cloud platforms, allow me to develop reliable and efficient software systems.
                         </p>
                         <div class="resume">
-                            <a href="https://drive.google.com/file/d/1UghoOTPve_6-7BVdVzidXZYfrdcf3eoE/view?usp=share_link" target="_blank" class="anchor">
+                            <a href="https://tinyurl.com/chibunnaCybersec" target="_blank" class="anchor">
                                 <h4 class="section__subtitle resume">Check out my resume
                             </a>
                         </div>
