--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             Reach out to me today with your project details, and let's work together to enhance your cybersecurity posture.
                         </p>
                         <div class="resume">
-                            <a href="https://tinyurl.com/chibunnaCybersec" target="_blank" class="anchor">
+                            <a href="https://tinyurl.com/chibunnaCyber" target="_blank" class="anchor">
                                 <h4 class="section__subtitle resume">Check out my resume
                             </a>
                         </div>
